--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -5,7 +5,7 @@ body{
 h2{
     font-size: 18px;
     padding: 10px 20px;
-    color: #575ed8;
+    color: #44d8ac;
 }
 
 #mario-chat{
@@ -26,7 +26,7 @@ h2{
     padding: 14px 0px;
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
-    color: #555;
+    color: rgb(71, 83, 75);
 }
 
 #feedback p{
@@ -36,7 +36,7 @@ h2{
 }
 
 #output strong{
-    color: #575ed8;
+    color: #1d5a48;
 }
 
 label{
@@ -59,7 +59,7 @@ input{
 }
 
 button{
-    background: #575ed8;
+    background: #44d8ac;
     color: #fff;
     font-size: 18px;
     border: 0;
